# fruit-cards

./: .env  Cargo.toml  README.md  mod.rs
api/: Cargo.toml
api/src/: flash.rs  lib.rs  post.rs  router.rs
api/src/routes/: card.rs  deck.rs  health_check.rs  mod.rs  post.rs
api/src/utilities/: app_status.rs  mod.rs  params.rs
api/templates/: index.html.tera  layout.html.tera
core/: Cargo.toml
core/src/: card.rs  deck.rs  lib.rs  post.rs
core/tests/: mock.rs  post_mock.rs
entity/: Cargo.toml
entity/src/: card.rs  deck.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs
src/: main.rs
tests/: health_check.rs
thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
