[package]
name = "fruit-cards-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
fruit-cards-core = { path = "../core" }
tokio = { version = "1.23.0", features = ["full"] }
axum = {version = "0.6.1", features = ["macros", "headers"]} 
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "cors"] }
tower-cookies = "0.8.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.92"
tera = "1.17.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
chrono = "0.4.23"