[package]
name = "fruit-cards-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
axum = { version = "0.6.1", features = ["macros", "headers"] }
tera = "1.17.1"

[dependencies.sea-orm]
version = "0.10.3" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    # "sqlx-postgres",
    # "sqlx-mysql",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }


[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
